# DocVaultAI

./: .gitignore  README.md  pyproject.toml  requirement.txt
RAG Dev/: chatbot.py
rag_vector_store/8580c15c-c098-421b-bce2-c1417a5916d5/: index_metadata.pickle
rag_vector_store/a80451a9-d7d4-46a1-bf7b-d79689091144/: index_metadata.pickle
src/: app.py  rag_core.py  styles.css
